# accelerate

demo/: CHANGELOG.md  ReadMe.txt
demo/deploy/: CMakeLists.txt  CMakeLists.txt.bak.curlfix  CMakeLists.txt.bak.final_fix  CMakeLists.txt.bak.opencvdir  CMakeLists.txt.bak.rkllm  build-linux.sh  修改日志记录.md
demo/deploy/install/demo_Linux_aarch64/: demo
demo/deploy/install/demo_Linux_aarch64/lib/: libopencv_highgui.so.3.4.5  libopencv_imgproc.so.3.4.5
demo/deploy/install/demo_Linux_aarch64/model/: border_kg_snapshot.db
demo/deploy/model/: convert_yolov8n.py
demo/deploy/src/: GPS.cpp  GPS.h  border_event_analyzer.cpp  border_event_analyzer.h  border_kg.cpp  camera.cpp  camera.h  fusion_inference.cpp  fusion_inference.h  image_enc.cc  image_enc.h  main.cpp  main.cpp.bak.rkllm_api_fix  runtime_config.cpp  runtime_config.h  send_info.cpp  send_info.h  yolov8.h  yolov8_utils.cpp  yolov8_utils.h
demo/deploy/src/input/: preview_window.cpp  preview_window.h  video_recorder.cpp
demo/deploy/src/pruning/: cdpruner.cpp  cdpruner.h  dart.cpp  dart.h  saint.cpp  saint.h
demo/deploy/src/rknpu2/: yolov8.cc
demo/deploy/src（备份原版）/: README.md  border_event_analyzer.h  image_enc.cc  image_enc.h  main(复件2).cpp  main.cpp  main（复件）.cpp  postprocess.cc  postprocess.h  send_info.cpp  send_info.h  yolov8_utils.cpp  yolov8_utils.h
demo/deploy/src（备份原版）/adaptation/: README.md
demo/deploy/src（备份原版）/app/: README.md
demo/deploy/src（备份原版）/common/: README.md  system_result.h
demo/deploy/src（备份原版）/detection/: README.md
demo/deploy/src（备份原版）/input/: README.md  video_recorder.h
demo/deploy/src（备份原版）/kg/: border_kg.cpp  border_kg.h
demo/deploy/src（备份原版）/risk/: README.md
demo/deploy/src（备份原版）/rknpu2/: yolov8.cc
demo/deploy/src（备份原版）/telemetry/: README.md  嵌入式.code-workspace
demo/deploy/src（备份原版）/transport/: README.md
demo/deploy/src（备份原版）/vlm/: README.md
demo/deploy/tools/: fix_compat.py
demo/deploy/utils/: CMakeLists.txt
demo/docs/: module_plan.md
demo/host/: README.md  receive_server.py
demo/host/received/: events.jsonl
demo/opencv-linux-aarch64-full/include/opencv2/: cvconfig.h
demo/opencv-linux-aarch64-full/lib/: libopencv_core.so.3.4.5  libopencv_imgcodecs.so.3.4.5  libopencv_shape.so.3.4.5
demo/opencv-linux-aarch64-full/lib/pkgconfig/: opencv.pc
demo/opencv-linux-aarch64-full/share/OpenCV/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
demo/opencv_build_aarch64/: CMakeCache.txt  CMakeDownloadLog.txt  CMakeVars.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OpenCVConfig.cmake  OpenCVGenPkgConfig.info.cmake  OpenCVModules.cmake  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt  opencv_data_config.hpp  opencv_python_config.cmake
demo/opencv_build_aarch64/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/apps/annotation/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/apps/createsamples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/apps/interactive-calibration/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/apps/traincascade/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/apps/version/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/apps/visualisation/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/data/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/lib/: libopencv_core.so.3.4.5  libopencv_highgui.so.3.4.5  libopencv_imgcodecs.so.3.4.5  libopencv_imgproc.so.3.4.5  libopencv_shape.so.3.4.5  libopencv_superres.so.3.4.5  libopencv_video.so.3.4.5  libopencv_videoio.so.3.4.5
demo/opencv_build_aarch64/modules/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/modules/.firstpass/calib3d/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/modules/.firstpass/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/modules/.firstpass/cudaarithm/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/modules/.firstpass/cudabgsegm/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/modules/.firstpass/cudacodec/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/modules/.firstpass/cudafeatures2d/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/modules/core/: CTestTestfile.cmake  Makefile  arithm.simd_declarations.hpp  arithm.sse4_1.cpp  cmake_install.cmake  mathfuncs_core.avx.cpp  mathfuncs_core.simd_declarations.hpp  stat.avx2.cpp  stat.simd_declarations.hpp  version_string.inc
demo/opencv_build_aarch64/modules/highgui/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/modules/imgcodecs/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/modules/imgproc/: CTestTestfile.cmake  Makefile  accum.avx.cpp  accum.simd_declarations.hpp  cmake_install.cmake
demo/opencv_build_aarch64/modules/java_bindings_generator/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gen_java.json
demo/opencv_build_aarch64/modules/python_bindings_generator/: CTestTestfile.cmake  Makefile  cmake_install.cmake  headers.txt  pyopencv_custom_headers.h
demo/opencv_build_aarch64/modules/shape/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/modules/superres/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/modules/video/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/modules/videoio/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/opencv_build_aarch64/python_loader/cv2/: config.py
(+101 files in other folders)
